2nd time -- attemtpting to prevent codeblocks from extending too far on mobile

--- a/src/styles/syntaxHighlighting.css
+++ b/src/styles/syntaxHighlighting.css
@@ -5,6 +5,10 @@
  * https://github.com/PrismJS/prism-themes
  */
 
+code {
+  max-width: 100%;
+}
+
 /* Code block styles */
 pre {
   overflow-x: auto;
